# verifiable-garbling

./: .gitignore  .justfile  Cargo.toml  README.md  _typos.toml  profile.pb
.github/: PULL_REQUEST_TEMPLATE.md  _typos.toml  dependabot.yml
.github/workflows/: cron-zizmor.yml  docs.yml  lint.yml  release.yml  security.yml  spellcheck.yml  unit.yml  zizmor.yml
circuits/: README.md
circuits/example1/: example1.bristol  labels.json  table.json
circuits/example2/: README.md  simplified_example2.bristol
crates/circuit-lib/: Cargo.toml
crates/circuit-lib/src/: lib.rs
crates/circuit-utils/: README.md  cargo.toml
crates/circuit-utils/circuit-cli/: cargo.toml
crates/circuit-utils/circuit-cli/src/: main.rs
crates/circuit-utils/circuit-lib/: cargo.toml
crates/circuit-utils/circuit-lib/src/: lib.rs
crates/circuits/: README.md
crates/circuits/example2/: example2.bristol
crates/circuits/example3/: README.md
crates/foo/: Cargo.toml
crates/garble/: Cargo.toml
crates/garble/src/: garble.rs  input.rs  lib.rs  output.rs  parse.rs
crates/validityproof/: Cargo.toml
crates/validityproof/core/: Cargo.toml
crates/validityproof/methods/: build.rs
crates/validityproof/methods/guest/: Cargo.toml
crates/validityproof/methods/guest/src/: main.rs
crates/validityproof/src/: main.rs
docs/: MULTI_GPU_SETUP.md  gc_flow.excalidraw
logs/: circuit_10000000gates_136797and_9863203xor.txt  circuit_1000000gates_100269and_899731xor.txt  circuit_1000000gates_13607and_986393xor.txt  circuit_25000000gates_342303and_24657697xor.txt  circuit_28032gates_8128and_19904xor.txt  circuit_30000000gates_411162and_29588838xor.txt  circuit_349617gates_57947and_286724xor.txt  circuit_35000000gates_479525and_34520475xor.txt  circuit_40000000gates_548350and_39451650xor.txt  circuit_45000000gates_615436and_44384564xor.txt  circuit_4gates_2and_2xor.txt
