[package]
name = "circuit-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Boolean circuit utilities and Bristol Fashion format parser"
license.workspace = true
repository.workspace = true
keywords = ["boolean-circuits", "bristol-fashion", "cryptography", "circuit-parser"]
categories = ["cryptography", "parser-implementations"]
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
rand = { workspace = true, features = ["std"] }
