[package]
name = "garble"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core garbled circuits implementation with free-XOR optimization"
license.workspace = true
repository.workspace = true
keywords = ["garbled-circuits", "cryptography", "mpc", "secure-computation"]
categories = ["cryptography"]
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
bytecheck.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rkyv.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
sha2.workspace = true
