[package]
name = "validityproof"
version = "0.1.0"
edition = "2021"

[dependencies]
bytecheck = "0.8.1"
bytemuck = "1.23.1"
garble = { path = "../garble" }
garbling-methods = { path = "methods" }
risc0-zkvm = "2.0.2"
rkyv = "0.8.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validityproof-core = { path = "core" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
