[package]
name = "freexorgarble"
version = "0.12.0"
edition = "2021"

[workspace]

[dependencies]
garble = { path = "../../../garble" }
risc0-zkvm = { version = "2.0.2", default-features = false, features = [
  "std",
  "heap-embedded-alloc",
] }
rkyv = "0.8.10"
validityproof-core = { path = "../../core" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
